# git-rewrite

./: .pre-commit-config.yaml  README.md  pyproject.toml
man1/: git-rewrite.1
src/git_rewrite/: __init__.py  __main__.py  main.py  utils.py
src/rewrite/: main.py  utils.py
tests/: test_utils.py
tools/: check_man.py  generate_man.py
