[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-rewrite"
version = "0.1.0"
description = "A git utility to amend any commit in history with staged changes"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = ["click>=8.0"]

[project.scripts]
git-rewrite = "git_rewrite:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1", "help2man"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1", "help2man"]

[tool.setuptools.data-files]
"share/man/man1" = ["man1/git-rewrite.1"]
